k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hkare
  labels:
    name: hkare
    environment: production
